build_log.txt
    Checking stfsc_engine v0.1.0 (/home/netcat/Downloads/STFSC engine)
error[E0506]: cannot assign to `entity.material.albedo_texture` because it is borrowed
   --> src/bin/editor.rs:803:25
    |
787 |             if let Some(texture_path) = &entity.material.albedo_texture {
    |                                         ------------------------------- `entity.material.albedo_texture` is borrowed here
...
803 |                         entity.material.albedo_texture = Some(p);
    |                         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ `entity.material.albedo_texture` is assigned to here but it was already borrowed
...
810 |                     eprintln!("Warning: Could not load texture at '{}'", texture_path);
    |                                                                          ------------ borrow later used here

For more information about this error, try `rustc --explain E0506`.
error: could not compile `stfsc_engine` (bin "editor") due to 1 previous error
